[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/HUD/HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/MENU Icons/StarBackground.png" type="Texture" id=2]
[ext_resource path="res://Assets/PlayerShip/PlayerShip.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Enemy Base/EnemyBasel.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/LargeDrone/LargeDrone.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Levels/Enemy Timer.gd" type="Script" id=6]

[node name="PlayerShip" instance=ExtResource( 3 )]

[node name="PlayerShip" parent="." index="0"]
position = Vector2( 482.818, 280.653 )

[node name="HUD" parent="." index="1" instance=ExtResource( 1 )]

[node name="Background" type="Sprite" parent="." index="2"]
show_behind_parent = true
position = Vector2( 480, 280 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 2 )

[node name="LargeDrone" parent="." index="3" instance=ExtResource( 5 )]
position = Vector2( 824.388, 111.372 )

[node name="LargeDrone2" parent="." index="4" instance=ExtResource( 5 )]
position = Vector2( 905.204, 484.537 )

[node name="LargeDrone3" parent="." index="5" instance=ExtResource( 5 )]
position = Vector2( 49.76, 489.614 )

[node name="LargeDrone4" parent="." index="6" instance=ExtResource( 5 )]
position = Vector2( 135.193, 112.495 )

[node name="Base" parent="." index="7" instance=ExtResource( 4 )]
position = Vector2( 906.82, 110.108 )

[node name="Base2" parent="." index="8" instance=ExtResource( 4 )]
position = Vector2( 53.1622, 109.802 )

[node name="Enemy Timer" type="Timer" parent="." index="10"]
wait_time = 5.0
autostart = true
script = ExtResource( 6 )

[node name="Spawn1" type="Position2D" parent="Enemy Timer" index="0"]
position = Vector2( 51.3501, 108.923 )

[node name="Spawn2" type="Position2D" parent="Enemy Timer" index="1"]
position = Vector2( 905.609, 108.456 )

[node name="Spawn3" type="Position2D" parent="Enemy Timer" index="2"]
position = Vector2( 905.59, 485.091 )

[node name="Spawn4" type="Position2D" parent="Enemy Timer" index="3"]
position = Vector2( 51.798, 490.284 )

[node name="Spawn5" type="Position2D" parent="Enemy Timer" index="4"]
position = Vector2( 507.518, 283.751 )

[node name="Spawn6" type="Position2D" parent="Enemy Timer" index="5"]
position = Vector2( 487.313, 76.0956 )

[node name="Spawn7" type="Position2D" parent="Enemy Timer" index="6"]
position = Vector2( 479.456, 692.327 )
[connection signal="timeout" from="Enemy Timer" to="Enemy Timer" method="_on_Enemy_Timer_timeout"]
